# ros_rc_bot

./: .gitignore  build_jetson.sh  build_pi.sh  readme.md
basecam/: CMakeLists.txt  CMakeLists.txt.NB  README.md  package.xml  package.xml.NB  setup.cfg  setup.py
basecam_msg/: setup.cfg
basecam_msgs/: CMakeLists.txt  package.xml  setup.py
basecam_node/: CMakeLists.txt  package.xml  setup.cfg  setup.py
bno055/: CMakeLists.txt  package.xml..NB
bno055_node/: CMakeLists.txt  package.xml  readme.md  setup.cfg  setup.py
driving/: CMakeLists.txt  CMakeLists.txt.NB  package.xml  setup.cfg  setup.py
driving_node/: CMakeLists.txt  package.xml  setup.cfg  setup.py
head_motion/: CMakeLists.txt  package.xml.NB
install_ros2/: readme.md
joystick_ros2/: joystick_ros2.py  package.xml
laser_scan_merger/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
my_package/: package.xml  setup.py
odom/: CMakeLists.txt  package.xml
odom_node/: CMakeLists.txt  package.xml  readme.md  setup.cfg  setup.py
pca9685/: CMakeLists.txt  package.xml  readme.md  setup.cfg  setup.py
pca9685/launch/: pca9685.launch  pca9685_launch.py
pca9685/pca9685/: pca9685.py
pca9685/src/: pca9685.py
pca9685/test/: test_pca9685_esc_calibrate.py
pca9685_node/: CMakeLists.txt  package.xml  readme.md  setup.cfg  setup.py
pwm_ctrl/: CMakeLists.txt  package.xml
pwm_msgs/: CMakeLists.txt  package.xml  setup.cfg  setup.py
rc_bringup/: CMakeLists.txt  CMakeLists.txt.NB  jetson_bringup.service  mobile.service  package.xml  package.xml.NB  pi_bringup.service  setup.cfg  setup.py  (+1 more)
(+88 files in other folders)
