<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pca9685</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="cbsim@zigbang.com">pi</maintainer>
  <license>TODO: License declaration</license>
 
  <exec_depend>pwm_msgs</exec_depend>

  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
